[package]
name = "pxros"
version = "0.1.0"
authors = ["Veecle GmbH - info@veecle.io", "HighTec EDV-Systeme GmbH - info@hightec-rt.com"]
description = "PXROS-HR Rust wrappers and bindings"
repository = "https://github.com/hightec-rt/pxros"
edition = "2021"
license = "Apache-2.0"

[dependencies]
defmt = "0.3.2"

[build-dependencies]
bitflags = "2.4"
bindgen = "0.69.4"
home = "=0.5.5" # Pinned because 0.5.9 is not compatible with HighTec toolchain v0.1.0-dev3
proc-macro2 = "1.0.79"
quote = "1.0.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0.52", features = ["full"] }
regex = "1.10.3"
pxros-hr = { version = "0.1.0",  registry = "htc-cargo-index" }

[target.tc162-htc-none]
# Default dwarf version of v0.2.0 HighTec compiler is version 2 which is
# incompatible with defmt location information
rustflags = [ "-Z", "dwarf-version=4"]

